[project]
name = "meshtastic-toolbot"
version = "0.1.0"
description = "A powerful telemetry and utility bot for Meshtastic mesh networks"
readme = "README.md"
authors = [{ name = "Pablito Salinero", email = "pablito@example.com" }]
license = { text = "MIT" }
keywords = ["meshtastic", "lora", "bot", "telemetry", "mesh"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Ham Radio",
]
requires-python = ">=3.9"
dependencies = [
    "meshtastic>=2.7.8",
    "pyyaml>=6.0.1",
    "platformdirs>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Pablitosalinero/meshtastic_toolbot"
Repository = "https://github.com/Pablitosalinero/meshtastic_toolbot"

[project.scripts]
mtb = "meshtastic_toolbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
